cmake_minimum_required(VERSION 3.19)
project(codeforces)

set(CMAKE_CXX_STANDARD 14)

#add_executable(codeforces src/_4A.cpp src/_4A.cpp src/_4A.cpp)
#add_executable(codeforces src/_71A.cpp src/_71A.cpp src/_71A.cpp)
#add_executable(codeforces src/_231A.cpp src/_231A.cpp src/_231A.cpp )
#add_executable(codeforces src/_231A.cpp src/_231A.cpp src/_231A.cpp )
#add_executable(codeforces src/_50A.cpp src/_50A.cpp src/_50A.cpp)
#add_executable(codeforces src/112.cpp src/112.cpp src/112.cpp)
#add_executable(codeforces  src/_266A.cpp  src/_266A.cpp  src/_266A.cpp)
#add_executable(codeforces  src/_236A.cpp  src/_236A.cpp  src/_236A.cpp)
#add_executable(codeforces  src/_791A.cpp  src/_791A.cpp  src/_791A.cpp)
add_executable(codeforces  src/_546A.cpp  src/_546A.cpp  src/_546A.cpp)