cmake_minimum_required(VERSION 3.19)
project(codeforces)

set(CMAKE_CXX_STANDARD 14)

add_executable(_4A src/_4A.cpp)
add_executable(_50A src/_50A.cpp)
add_executable(_71A src/_71A.cpp)
add_executable(_112 src/_112A.cpp)
add_executable(_158A src/_158A.cpp)
add_executable(_231A src/_231A.cpp)
add_executable(_236A src/_236A.cpp)
add_executable(_263A src/_263A.cpp)
add_executable(_266A src/_266A.cpp)
add_executable(_281A src/_281A.cpp)
add_executable(_282A src/_282A.cpp)
add_executable(_339A src/_339A.cpp)
add_executable(_546A src/_546A.cpp)
add_executable(_617A src/_617A.cpp)
add_executable(_791A src/_791A.cpp)
add_executable(_977A src/_977A.cpp)
add_executable(_59A src/_59A.cpp)
